Fixed services title on mobile

--- a/components/services/services.module.css
+++ b/components/services/services.module.css
@@ -31,4 +31,8 @@
     .services {
         grid-template-columns: 1fr;
     }
+
+    .subtitle {
+        font-size: 30px;
+    }
 }
